// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render failed 1`] = `
.c19 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border-style: solid;
  border-color: transparent;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  transition: background-color 0.1s,border-color 0.1s,outline-color 0.1s,box-shadow 0.1s;
  -webkit-font-smoothing: antialiased;
  background-color: #9F85FF;
  color: #000000;
  border-color: transparent;
  border-width: 1.5px;
  padding: 0 30.5px;
  min-height: 32px;
  font-size: 12px;
  line-height: 16px;
  letter-spacing: 0.15px;
  margin-right: 16px;
}

.c19:focus-visible,
.teleport-button__force-focus-visible .c19 {
  background-color: #9F85FF;
  color: #000000;
  border-color: #000000;
  border-radius: 2px;
  outline: 2px solid #9F85FF;
}

.c19:hover,
.teleport-button__force-hover .c19 {
  background-color: #B29DFF;
  border-color: transparent;
  color: #000000;
  box-shadow: 0px 3px 5px -1px rgba(0, 0, 0, 0.20),0px 5px 8px 0px rgba(0, 0, 0, 0.14),0px 1px 14px 0px rgba(0, 0, 0, 0.12);
}

.c19:active,
.teleport-button__force-active .c19 {
  background-color: #C5B6FF;
  border-color: transparent;
  color: #000000;
}

.c19:disabled {
  background-color: rgba(255,255,255,0.07);
  color: rgba(255, 255, 255, 0.3);
  border-color: transparent;
  box-shadow: none;
  cursor: auto;
}

.c20 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border-style: solid;
  border-color: transparent;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  transition: background-color 0.1s,border-color 0.1s,outline-color 0.1s,box-shadow 0.1s;
  -webkit-font-smoothing: antialiased;
  background-color: rgba(255,255,255,0.07);
  color: rgba(255, 255, 255, 0.72);
  border-color: transparent;
  border-width: 1.5px;
  padding: 0 30.5px;
  min-height: 32px;
  font-size: 12px;
  line-height: 16px;
  letter-spacing: 0.15px;
}

.c20:focus-visible,
.teleport-button__force-focus-visible .c20 {
  background-color: rgba(255,255,255,0.07);
  color: rgba(255, 255, 255, 0.72);
  border-color: rgba(255, 255, 255, 0.72);
  border-radius: 4px;
  outline: none;
}

.c20:hover,
.teleport-button__force-hover .c20 {
  background-color: rgba(255,255,255,0.13);
  border-color: transparent;
  color: #FFFFFF;
  box-shadow: none;
}

.c20:active,
.teleport-button__force-active .c20 {
  background-color: rgba(255,255,255,0.18);
  border-color: transparent;
  color: #FFFFFF;
}

.c20:disabled {
  background-color: rgba(255,255,255,0.07);
  color: rgba(255, 255, 255, 0.3);
  border-color: transparent;
  box-shadow: none;
  cursor: auto;
}

.c1 {
  z-index: -1;
  position: fixed;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
  background-color: rgba(0, 0, 0, 0.5);
  opacity: 1;
  touch-action: none;
}

.c0 {
  position: fixed;
  z-index: 1200;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
}

.c2 {
  height: 100%;
  outline: none;
  color: black;
  display: flex;
  align-items: center;
  justify-content: center;
  opacity: 1;
  will-change: opacity;
  transition: opacity 225ms cubic-bezier(0.4,0,0.2,1) 0ms;
}

.c3 {
  padding: 32px;
  padding-top: 24px;
  background: #222C59;
  color: #FFFFFF;
  border-radius: 8px;
  box-shadow: 0 8px 32px rgba(0,0,0,0.24);
  display: flex;
  flex-direction: column;
  position: relative;
  overflow-y: auto;
  max-height: calc(100% - 96px);
  max-width: 600px;
}

.c10 {
  display: inline-flex;
  align-items: center;
  justify-content: center;
}

.c7 {
  box-sizing: border-box;
  margin: 0 0 24px 0;
  min-height: 40px;
  border: 2px solid;
  border-radius: 8px;
  border-color: #FF6257;
}

.c7 a {
  color: #FFFFFF;
}

.c8 {
  padding: 12px 16px;
  overflow: auto;
  word-break: break-word;
  display: flex;
  align-items: center;
  background: rgba(255, 98, 87, 0.1);
}

.c9 {
  border-radius: 50%;
  line-height: 0;
  margin-right: 16px;
  color: #000000;
  background: #FF6257;
  padding: 8px;
}

.c4 {
  box-sizing: border-box;
  margin-bottom: 16px;
  min-height: 32px;
}

.c11 {
  box-sizing: border-box;
  flex: 1;
}

.c13 {
  box-sizing: border-box;
  min-width: 500px;
  flex: 0 0 auto;
}

.c18 {
  box-sizing: border-box;
}

.c6 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  font-weight: 500;
  font-size: 18px;
  line-height: 24px;
}

.c12 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  font-weight: 600;
  font-size: 14px;
  line-height: 20px;
}

.c16 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  margin-bottom: 8px;
}

.c5 {
  display: flex;
  align-items: center;
}

.c14 {
  display: flex;
}

.c15 {
  margin-bottom: 32px;
  flex: 1;
  flex-direction: column;
  flex: 0 0 auto;
}

.c17 .react-select-container {
  box-sizing: border-box;
  display: block;
  font-size: 14px;
  outline: none;
  width: 100%;
  color: #FFFFFF;
  background-color: transparent;
  margin-bottom: 0px;
  border-radius: 4px;
}

.c17 .react-select__control {
  outline: none;
  min-height: 40px;
  height: fit-content;
  border: 1px solid rgba(255, 255, 255, 0.54);
  border-radius: 4px;
  background-color: transparent;
  box-shadow: none;
}

.c17 .react-select__control .react-select__dropdown-indicator {
  color: rgba(255, 255, 255, 0.54);
}

.c17 .react-select__control:hover,
.c17 .react-select__control:focus,
.c17 .react-select__control:active {
  border: 1px solid rgba(255, 255, 255, 0.72);
  background-color: rgba(255,255,255,0.07);
  cursor: pointer;
}

.c17 .react-select__control:hover .react-select__dropdown-indicator,
.c17 .react-select__control:focus .react-select__dropdown-indicator,
.c17 .react-select__control:active .react-select__dropdown-indicator {
  color: #FFFFFF;
}

.c17 .react-select__control .react-select__indicator:hover,
.c17 .react-select__control .react-select__dropdown-indicator:hover,
.c17 .react-select__control .react-select__indicator:focus,
.c17 .react-select__control .react-select__dropdown-indicator:focus,
.c17 .react-select__control .react-select__indicator:active,
.c17 .react-select__control .react-select__dropdown-indicator:active {
  color: #FFFFFF;
}

.c17 .react-select__control--is-focused {
  border-color: rgba(255, 255, 255, 0.72);
  background-color: rgba(255,255,255,0.07);
  cursor: pointer;
}

.c17 .react-select__control--is-focused .react-select__dropdown-indicator {
  color: #FFFFFF;
}

.c17 .react-select__single-value {
  color: #FFFFFF;
}

.c17 .react-select__placeholder {
  color: rgba(255, 255, 255, 0.54);
}

.c17 .react-select__multi-value {
  background-color: rgba(255,255,255,0.13);
}

.c17 .react-select__multi-value .react-select__multi-value__label {
  color: #FFFFFF;
  padding: 0 6px;
}

.c17 .react-select__multi-value .react-select__multi-value__remove {
  color: #FFFFFF;
}

.c17 .react-select__multi-value .react-select__multi-value__remove:hover {
  background-color: rgba(255,255,255,0.07);
  color: #FF6257;
}

.c17 .react-select__option:hover {
  cursor: pointer;
  background-color: rgba(255,255,255,0.07);
}

.c17 .react-select__option--is-focused {
  background-color: rgba(255,255,255,0.07);
}

.c17 .react-select__option--is-focused:hover {
  cursor: pointer;
  background-color: rgba(255,255,255,0.07);
}

.c17 .react-select__option--is-selected {
  background-color: rgba(255,255,255,0.13);
  color: inherit;
  font-weight: 500;
}

.c17 .react-select__option--is-selected:hover {
  background-color: rgba(255,255,255,0.13);
}

.c17 .react-select__clear-indicator {
  color: rgba(255, 255, 255, 0.72);
}

.c17 .react-select__clear-indicator:hover,
.c17 .react-select__clear-indicator:focus {
  background-color: rgba(255,255,255,0.07);
}

.c17 .react-select__clear-indicator:hover svg,
.c17 .react-select__clear-indicator:focus svg {
  color: #FF6257;
}

.c17 .react-select__menu {
  margin-top: 0px;
  background-color: #344179;
  box-shadow: 0px 5px 5px -3px rgba(0, 0, 0, 0.2),0px 8px 10px 1px rgba(0, 0, 0, 0.14),0px 3px 14px 2px rgba(0, 0, 0, 0.12);
}

.c17 .react-select__menu .react-select__menu-list::-webkit-scrollbar-thumb {
  background: rgba(255,255,255,0.13);
  border-radius: 4px;
}

.c17 .react-select__indicator-separator {
  display: none;
}

.c17 .react-select__loading-indicator {
  display: none;
}

.c17 .react-select__control--is-disabled {
  color: rgba(255, 255, 255, 0.36);
  border: 1px solid rgba(255, 255, 255, 0.36);
}

.c17 .react-select__control--is-disabled .react-select__single-value,
.c17 .react-select__control--is-disabled .react-select__placeholder {
  color: rgba(255, 255, 255, 0.36);
}

.c17 .react-select__control--is-disabled .react-select__indicator {
  color: rgba(255, 255, 255, 0.36);
}

.c17 .react-select__input {
  color: #FFFFFF;
}

<div
  class="c0"
  data-testid="Modal"
>
  <div
    aria-hidden="true"
    class="c1"
    data-testid="backdrop"
  />
  <div
    class="c2"
  >
    <div
      class="c3"
      data-testid="dialogbox"
    >
      <div
        class="c4 c5"
      >
        <h2
          class="c6"
        >
          Select a maintenance start window
        </h2>
      </div>
      <div
        class="c7"
        kind="danger"
      >
        <div
          class="c8"
          kind="danger"
        >
          <div
            class="c9"
            kind="danger"
          >
            <span
              class="c10 icon icon-warning"
            >
              <svg
                fill="currentColor"
                height="16"
                viewBox="0 0 24 24"
                width="16"
              >
                <path
                  d="M12 9C12.4142 9 12.75 9.33579 12.75 9.75V13.5C12.75 13.9142 12.4142 14.25 12 14.25C11.5858 14.25 11.25 13.9142 11.25 13.5V9.75C11.25 9.33579 11.5858 9 12 9Z"
                />
                <path
                  d="M12 17.8125C12.5178 17.8125 12.9375 17.3928 12.9375 16.875C12.9375 16.3572 12.5178 15.9375 12 15.9375C11.4822 15.9375 11.0625 16.3572 11.0625 16.875C11.0625 17.3928 11.4822 17.8125 12 17.8125Z"
                />
                <path
                  clip-rule="evenodd"
                  d="M10.09 3.34287L1.88101 17.7086C1.04292 19.1753 2.10193 21.0001 3.79114 21.0001H20.2092C21.8984 21.0001 22.9574 19.1753 22.1193 17.7086L13.9103 3.34287C13.0657 1.86488 10.9346 1.86488 10.09 3.34287ZM3.18337 18.4528L11.3924 4.08708C11.6611 3.61681 12.3392 3.61681 12.6079 4.08708L20.8169 18.4528C21.0836 18.9195 20.7466 19.5001 20.2092 19.5001H3.79114C3.25367 19.5001 2.91671 18.9195 3.18337 18.4528Z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </div>
          <div
            class="c11"
          >
            <div
              class="c12"
            >
              there was an error processing the request
            </div>
          </div>
        </div>
      </div>
      <div
        class="c13 c14 c15"
      >
        <div
          class="c16"
        >
          Teleport provides different cluster maintenance windows to minimize downtime during upgrades, patches, etc.
        </div>
        <div
          class="c17"
        >
          <div
            class="react-select-container css-2b097c-container"
          >
            <div
              class="react-select__control css-yk16xz-control"
            >
              <div
                class="react-select__value-container react-select__value-container--has-value css-g1d714-ValueContainer"
              >
                <div
                  class="react-select__single-value css-1uccc91-singleValue"
                >
                  08:00 (UTC)
                </div>
                <div
                  class="css-b8ldur-Input"
                >
                  <div
                    class="react-select__input"
                    style="display: inline-block;"
                  >
                    <input
                      aria-autocomplete="list"
                      autocapitalize="none"
                      autocomplete="off"
                      autocorrect="off"
                      id="react-select-4-input"
                      spellcheck="false"
                      style="box-sizing: content-box; width: 2px; border: 0px; opacity: 1; outline: 0; padding: 0px;"
                      tabindex="0"
                      type="text"
                      value=""
                    />
                    <div
                      style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;"
                    />
                  </div>
                </div>
              </div>
              <div
                class="react-select__indicators css-1hb7zxy-IndicatorsContainer"
              >
                <span
                  class="react-select__indicator-separator css-1okebmr-indicatorSeparator"
                />
                <div
                  aria-hidden="true"
                  class="react-select__indicator react-select__dropdown-indicator css-tlfecz-indicatorContainer"
                >
                  <svg
                    aria-hidden="true"
                    class="css-6q0nyr-Svg"
                    focusable="false"
                    height="20"
                    viewBox="0 0 20 20"
                    width="20"
                  >
                    <path
                      d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="c18"
      >
        <button
          class="c19"
          fill="filled"
        >
          Save
        </button>
        <button
          class="c20"
          fill="filled"
        >
          Cancel
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`render loaded 1`] = `
.c13 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border-style: solid;
  border-color: transparent;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  transition: background-color 0.1s,border-color 0.1s,outline-color 0.1s,box-shadow 0.1s;
  -webkit-font-smoothing: antialiased;
  background-color: #9F85FF;
  color: #000000;
  border-color: transparent;
  border-width: 1.5px;
  padding: 0 30.5px;
  min-height: 32px;
  font-size: 12px;
  line-height: 16px;
  letter-spacing: 0.15px;
  margin-right: 16px;
}

.c13:focus-visible,
.teleport-button__force-focus-visible .c13 {
  background-color: #9F85FF;
  color: #000000;
  border-color: #000000;
  border-radius: 2px;
  outline: 2px solid #9F85FF;
}

.c13:hover,
.teleport-button__force-hover .c13 {
  background-color: #B29DFF;
  border-color: transparent;
  color: #000000;
  box-shadow: 0px 3px 5px -1px rgba(0, 0, 0, 0.20),0px 5px 8px 0px rgba(0, 0, 0, 0.14),0px 1px 14px 0px rgba(0, 0, 0, 0.12);
}

.c13:active,
.teleport-button__force-active .c13 {
  background-color: #C5B6FF;
  border-color: transparent;
  color: #000000;
}

.c13:disabled {
  background-color: rgba(255,255,255,0.07);
  color: rgba(255, 255, 255, 0.3);
  border-color: transparent;
  box-shadow: none;
  cursor: auto;
}

.c14 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border-style: solid;
  border-color: transparent;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  transition: background-color 0.1s,border-color 0.1s,outline-color 0.1s,box-shadow 0.1s;
  -webkit-font-smoothing: antialiased;
  background-color: rgba(255,255,255,0.07);
  color: rgba(255, 255, 255, 0.72);
  border-color: transparent;
  border-width: 1.5px;
  padding: 0 30.5px;
  min-height: 32px;
  font-size: 12px;
  line-height: 16px;
  letter-spacing: 0.15px;
}

.c14:focus-visible,
.teleport-button__force-focus-visible .c14 {
  background-color: rgba(255,255,255,0.07);
  color: rgba(255, 255, 255, 0.72);
  border-color: rgba(255, 255, 255, 0.72);
  border-radius: 4px;
  outline: none;
}

.c14:hover,
.teleport-button__force-hover .c14 {
  background-color: rgba(255,255,255,0.13);
  border-color: transparent;
  color: #FFFFFF;
  box-shadow: none;
}

.c14:active,
.teleport-button__force-active .c14 {
  background-color: rgba(255,255,255,0.18);
  border-color: transparent;
  color: #FFFFFF;
}

.c14:disabled {
  background-color: rgba(255,255,255,0.07);
  color: rgba(255, 255, 255, 0.3);
  border-color: transparent;
  box-shadow: none;
  cursor: auto;
}

.c1 {
  z-index: -1;
  position: fixed;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
  background-color: rgba(0, 0, 0, 0.5);
  opacity: 1;
  touch-action: none;
}

.c0 {
  position: fixed;
  z-index: 1200;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
}

.c2 {
  height: 100%;
  outline: none;
  color: black;
  display: flex;
  align-items: center;
  justify-content: center;
  opacity: 1;
  will-change: opacity;
  transition: opacity 225ms cubic-bezier(0.4,0,0.2,1) 0ms;
}

.c3 {
  padding: 32px;
  padding-top: 24px;
  background: #222C59;
  color: #FFFFFF;
  border-radius: 8px;
  box-shadow: 0 8px 32px rgba(0,0,0,0.24);
  display: flex;
  flex-direction: column;
  position: relative;
  overflow-y: auto;
  max-height: calc(100% - 96px);
  max-width: 600px;
}

.c4 {
  box-sizing: border-box;
  margin-bottom: 16px;
  min-height: 32px;
}

.c7 {
  box-sizing: border-box;
  min-width: 500px;
  flex: 0 0 auto;
}

.c12 {
  box-sizing: border-box;
}

.c6 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  font-weight: 500;
  font-size: 18px;
  line-height: 24px;
}

.c10 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  margin-bottom: 8px;
}

.c5 {
  display: flex;
  align-items: center;
}

.c8 {
  display: flex;
}

.c9 {
  margin-bottom: 32px;
  flex: 1;
  flex-direction: column;
  flex: 0 0 auto;
}

.c11 .react-select-container {
  box-sizing: border-box;
  display: block;
  font-size: 14px;
  outline: none;
  width: 100%;
  color: #FFFFFF;
  background-color: transparent;
  margin-bottom: 0px;
  border-radius: 4px;
}

.c11 .react-select__control {
  outline: none;
  min-height: 40px;
  height: fit-content;
  border: 1px solid rgba(255, 255, 255, 0.54);
  border-radius: 4px;
  background-color: transparent;
  box-shadow: none;
}

.c11 .react-select__control .react-select__dropdown-indicator {
  color: rgba(255, 255, 255, 0.54);
}

.c11 .react-select__control:hover,
.c11 .react-select__control:focus,
.c11 .react-select__control:active {
  border: 1px solid rgba(255, 255, 255, 0.72);
  background-color: rgba(255,255,255,0.07);
  cursor: pointer;
}

.c11 .react-select__control:hover .react-select__dropdown-indicator,
.c11 .react-select__control:focus .react-select__dropdown-indicator,
.c11 .react-select__control:active .react-select__dropdown-indicator {
  color: #FFFFFF;
}

.c11 .react-select__control .react-select__indicator:hover,
.c11 .react-select__control .react-select__dropdown-indicator:hover,
.c11 .react-select__control .react-select__indicator:focus,
.c11 .react-select__control .react-select__dropdown-indicator:focus,
.c11 .react-select__control .react-select__indicator:active,
.c11 .react-select__control .react-select__dropdown-indicator:active {
  color: #FFFFFF;
}

.c11 .react-select__control--is-focused {
  border-color: rgba(255, 255, 255, 0.72);
  background-color: rgba(255,255,255,0.07);
  cursor: pointer;
}

.c11 .react-select__control--is-focused .react-select__dropdown-indicator {
  color: #FFFFFF;
}

.c11 .react-select__single-value {
  color: #FFFFFF;
}

.c11 .react-select__placeholder {
  color: rgba(255, 255, 255, 0.54);
}

.c11 .react-select__multi-value {
  background-color: rgba(255,255,255,0.13);
}

.c11 .react-select__multi-value .react-select__multi-value__label {
  color: #FFFFFF;
  padding: 0 6px;
}

.c11 .react-select__multi-value .react-select__multi-value__remove {
  color: #FFFFFF;
}

.c11 .react-select__multi-value .react-select__multi-value__remove:hover {
  background-color: rgba(255,255,255,0.07);
  color: #FF6257;
}

.c11 .react-select__option:hover {
  cursor: pointer;
  background-color: rgba(255,255,255,0.07);
}

.c11 .react-select__option--is-focused {
  background-color: rgba(255,255,255,0.07);
}

.c11 .react-select__option--is-focused:hover {
  cursor: pointer;
  background-color: rgba(255,255,255,0.07);
}

.c11 .react-select__option--is-selected {
  background-color: rgba(255,255,255,0.13);
  color: inherit;
  font-weight: 500;
}

.c11 .react-select__option--is-selected:hover {
  background-color: rgba(255,255,255,0.13);
}

.c11 .react-select__clear-indicator {
  color: rgba(255, 255, 255, 0.72);
}

.c11 .react-select__clear-indicator:hover,
.c11 .react-select__clear-indicator:focus {
  background-color: rgba(255,255,255,0.07);
}

.c11 .react-select__clear-indicator:hover svg,
.c11 .react-select__clear-indicator:focus svg {
  color: #FF6257;
}

.c11 .react-select__menu {
  margin-top: 0px;
  background-color: #344179;
  box-shadow: 0px 5px 5px -3px rgba(0, 0, 0, 0.2),0px 8px 10px 1px rgba(0, 0, 0, 0.14),0px 3px 14px 2px rgba(0, 0, 0, 0.12);
}

.c11 .react-select__menu .react-select__menu-list::-webkit-scrollbar-thumb {
  background: rgba(255,255,255,0.13);
  border-radius: 4px;
}

.c11 .react-select__indicator-separator {
  display: none;
}

.c11 .react-select__loading-indicator {
  display: none;
}

.c11 .react-select__control--is-disabled {
  color: rgba(255, 255, 255, 0.36);
  border: 1px solid rgba(255, 255, 255, 0.36);
}

.c11 .react-select__control--is-disabled .react-select__single-value,
.c11 .react-select__control--is-disabled .react-select__placeholder {
  color: rgba(255, 255, 255, 0.36);
}

.c11 .react-select__control--is-disabled .react-select__indicator {
  color: rgba(255, 255, 255, 0.36);
}

.c11 .react-select__input {
  color: #FFFFFF;
}

<div
  class="c0"
  data-testid="Modal"
>
  <div
    aria-hidden="true"
    class="c1"
    data-testid="backdrop"
  />
  <div
    class="c2"
  >
    <div
      class="c3"
      data-testid="dialogbox"
    >
      <div
        class="c4 c5"
      >
        <h2
          class="c6"
        >
          Select a maintenance start window
        </h2>
      </div>
      <div
        class="c7 c8 c9"
      >
        <div
          class="c10"
        >
          Teleport provides different cluster maintenance windows to minimize downtime during upgrades, patches, etc.
        </div>
        <div
          class="c11"
        >
          <div
            class="react-select-container css-2b097c-container"
          >
            <div
              class="react-select__control css-yk16xz-control"
            >
              <div
                class="react-select__value-container react-select__value-container--has-value css-g1d714-ValueContainer"
              >
                <div
                  class="react-select__single-value css-1uccc91-singleValue"
                >
                  08:00 (UTC)
                </div>
                <div
                  class="css-b8ldur-Input"
                >
                  <div
                    class="react-select__input"
                    style="display: inline-block;"
                  >
                    <input
                      aria-autocomplete="list"
                      autocapitalize="none"
                      autocomplete="off"
                      autocorrect="off"
                      id="react-select-2-input"
                      spellcheck="false"
                      style="box-sizing: content-box; width: 2px; border: 0px; opacity: 1; outline: 0; padding: 0px;"
                      tabindex="0"
                      type="text"
                      value=""
                    />
                    <div
                      style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;"
                    />
                  </div>
                </div>
              </div>
              <div
                class="react-select__indicators css-1hb7zxy-IndicatorsContainer"
              >
                <span
                  class="react-select__indicator-separator css-1okebmr-indicatorSeparator"
                />
                <div
                  aria-hidden="true"
                  class="react-select__indicator react-select__dropdown-indicator css-tlfecz-indicatorContainer"
                >
                  <svg
                    aria-hidden="true"
                    class="css-6q0nyr-Svg"
                    focusable="false"
                    height="20"
                    viewBox="0 0 20 20"
                    width="20"
                  >
                    <path
                      d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="c12"
      >
        <button
          class="c13"
          fill="filled"
        >
          Save
        </button>
        <button
          class="c14"
          fill="filled"
        >
          Cancel
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`render processing 1`] = `
.c13 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border-style: solid;
  border-color: transparent;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  transition: background-color 0.1s,border-color 0.1s,outline-color 0.1s,box-shadow 0.1s;
  -webkit-font-smoothing: antialiased;
  background-color: #9F85FF;
  color: #000000;
  border-color: transparent;
  border-width: 1.5px;
  padding: 0 30.5px;
  min-height: 32px;
  font-size: 12px;
  line-height: 16px;
  letter-spacing: 0.15px;
  margin-right: 16px;
}

.c13:focus-visible,
.teleport-button__force-focus-visible .c13 {
  background-color: #9F85FF;
  color: #000000;
  border-color: #000000;
  border-radius: 2px;
  outline: 2px solid #9F85FF;
}

.c13:hover,
.teleport-button__force-hover .c13 {
  background-color: #B29DFF;
  border-color: transparent;
  color: #000000;
  box-shadow: 0px 3px 5px -1px rgba(0, 0, 0, 0.20),0px 5px 8px 0px rgba(0, 0, 0, 0.14),0px 1px 14px 0px rgba(0, 0, 0, 0.12);
}

.c13:active,
.teleport-button__force-active .c13 {
  background-color: #C5B6FF;
  border-color: transparent;
  color: #000000;
}

.c13:disabled {
  background-color: rgba(255,255,255,0.07);
  color: rgba(255, 255, 255, 0.3);
  border-color: transparent;
  box-shadow: none;
  cursor: auto;
}

.c14 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border-style: solid;
  border-color: transparent;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  transition: background-color 0.1s,border-color 0.1s,outline-color 0.1s,box-shadow 0.1s;
  -webkit-font-smoothing: antialiased;
  background-color: rgba(255,255,255,0.07);
  color: rgba(255, 255, 255, 0.72);
  border-color: transparent;
  border-width: 1.5px;
  padding: 0 30.5px;
  min-height: 32px;
  font-size: 12px;
  line-height: 16px;
  letter-spacing: 0.15px;
}

.c14:focus-visible,
.teleport-button__force-focus-visible .c14 {
  background-color: rgba(255,255,255,0.07);
  color: rgba(255, 255, 255, 0.72);
  border-color: rgba(255, 255, 255, 0.72);
  border-radius: 4px;
  outline: none;
}

.c14:hover,
.teleport-button__force-hover .c14 {
  background-color: rgba(255,255,255,0.13);
  border-color: transparent;
  color: #FFFFFF;
  box-shadow: none;
}

.c14:active,
.teleport-button__force-active .c14 {
  background-color: rgba(255,255,255,0.18);
  border-color: transparent;
  color: #FFFFFF;
}

.c14:disabled {
  background-color: rgba(255,255,255,0.07);
  color: rgba(255, 255, 255, 0.3);
  border-color: transparent;
  box-shadow: none;
  cursor: auto;
}

.c1 {
  z-index: -1;
  position: fixed;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
  background-color: rgba(0, 0, 0, 0.5);
  opacity: 1;
  touch-action: none;
}

.c0 {
  position: fixed;
  z-index: 1200;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
}

.c2 {
  height: 100%;
  outline: none;
  color: black;
  display: flex;
  align-items: center;
  justify-content: center;
  opacity: 1;
  will-change: opacity;
  transition: opacity 225ms cubic-bezier(0.4,0,0.2,1) 0ms;
}

.c3 {
  padding: 32px;
  padding-top: 24px;
  background: #222C59;
  color: #FFFFFF;
  border-radius: 8px;
  box-shadow: 0 8px 32px rgba(0,0,0,0.24);
  display: flex;
  flex-direction: column;
  position: relative;
  overflow-y: auto;
  max-height: calc(100% - 96px);
  max-width: 600px;
}

.c4 {
  box-sizing: border-box;
  margin-bottom: 16px;
  min-height: 32px;
}

.c7 {
  box-sizing: border-box;
  min-width: 500px;
  flex: 0 0 auto;
}

.c12 {
  box-sizing: border-box;
}

.c6 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  font-weight: 500;
  font-size: 18px;
  line-height: 24px;
}

.c10 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  margin-bottom: 8px;
}

.c5 {
  display: flex;
  align-items: center;
}

.c8 {
  display: flex;
}

.c9 {
  margin-bottom: 32px;
  flex: 1;
  flex-direction: column;
  flex: 0 0 auto;
}

.c11 .react-select-container {
  box-sizing: border-box;
  display: block;
  font-size: 14px;
  outline: none;
  width: 100%;
  color: #FFFFFF;
  background-color: transparent;
  margin-bottom: 0px;
  border-radius: 4px;
}

.c11 .react-select__control {
  outline: none;
  min-height: 40px;
  height: fit-content;
  border: 1px solid rgba(255, 255, 255, 0.54);
  border-radius: 4px;
  background-color: transparent;
  box-shadow: none;
}

.c11 .react-select__control .react-select__dropdown-indicator {
  color: rgba(255, 255, 255, 0.54);
}

.c11 .react-select__control:hover,
.c11 .react-select__control:focus,
.c11 .react-select__control:active {
  border: 1px solid rgba(255, 255, 255, 0.72);
  background-color: rgba(255,255,255,0.07);
  cursor: pointer;
}

.c11 .react-select__control:hover .react-select__dropdown-indicator,
.c11 .react-select__control:focus .react-select__dropdown-indicator,
.c11 .react-select__control:active .react-select__dropdown-indicator {
  color: #FFFFFF;
}

.c11 .react-select__control .react-select__indicator:hover,
.c11 .react-select__control .react-select__dropdown-indicator:hover,
.c11 .react-select__control .react-select__indicator:focus,
.c11 .react-select__control .react-select__dropdown-indicator:focus,
.c11 .react-select__control .react-select__indicator:active,
.c11 .react-select__control .react-select__dropdown-indicator:active {
  color: #FFFFFF;
}

.c11 .react-select__control--is-focused {
  border-color: rgba(255, 255, 255, 0.72);
  background-color: rgba(255,255,255,0.07);
  cursor: pointer;
}

.c11 .react-select__control--is-focused .react-select__dropdown-indicator {
  color: #FFFFFF;
}

.c11 .react-select__single-value {
  color: #FFFFFF;
}

.c11 .react-select__placeholder {
  color: rgba(255, 255, 255, 0.54);
}

.c11 .react-select__multi-value {
  background-color: rgba(255,255,255,0.13);
}

.c11 .react-select__multi-value .react-select__multi-value__label {
  color: #FFFFFF;
  padding: 0 6px;
}

.c11 .react-select__multi-value .react-select__multi-value__remove {
  color: #FFFFFF;
}

.c11 .react-select__multi-value .react-select__multi-value__remove:hover {
  background-color: rgba(255,255,255,0.07);
  color: #FF6257;
}

.c11 .react-select__option:hover {
  cursor: pointer;
  background-color: rgba(255,255,255,0.07);
}

.c11 .react-select__option--is-focused {
  background-color: rgba(255,255,255,0.07);
}

.c11 .react-select__option--is-focused:hover {
  cursor: pointer;
  background-color: rgba(255,255,255,0.07);
}

.c11 .react-select__option--is-selected {
  background-color: rgba(255,255,255,0.13);
  color: inherit;
  font-weight: 500;
}

.c11 .react-select__option--is-selected:hover {
  background-color: rgba(255,255,255,0.13);
}

.c11 .react-select__clear-indicator {
  color: rgba(255, 255, 255, 0.72);
}

.c11 .react-select__clear-indicator:hover,
.c11 .react-select__clear-indicator:focus {
  background-color: rgba(255,255,255,0.07);
}

.c11 .react-select__clear-indicator:hover svg,
.c11 .react-select__clear-indicator:focus svg {
  color: #FF6257;
}

.c11 .react-select__menu {
  margin-top: 0px;
  background-color: #344179;
  box-shadow: 0px 5px 5px -3px rgba(0, 0, 0, 0.2),0px 8px 10px 1px rgba(0, 0, 0, 0.14),0px 3px 14px 2px rgba(0, 0, 0, 0.12);
}

.c11 .react-select__menu .react-select__menu-list::-webkit-scrollbar-thumb {
  background: rgba(255,255,255,0.13);
  border-radius: 4px;
}

.c11 .react-select__indicator-separator {
  display: none;
}

.c11 .react-select__loading-indicator {
  display: none;
}

.c11 .react-select__control--is-disabled {
  color: rgba(255, 255, 255, 0.36);
  border: 1px solid rgba(255, 255, 255, 0.36);
}

.c11 .react-select__control--is-disabled .react-select__single-value,
.c11 .react-select__control--is-disabled .react-select__placeholder {
  color: rgba(255, 255, 255, 0.36);
}

.c11 .react-select__control--is-disabled .react-select__indicator {
  color: rgba(255, 255, 255, 0.36);
}

.c11 .react-select__input {
  color: #FFFFFF;
}

<div
  class="c0"
  data-testid="Modal"
>
  <div
    aria-hidden="true"
    class="c1"
    data-testid="backdrop"
  />
  <div
    class="c2"
  >
    <div
      class="c3"
      data-testid="dialogbox"
    >
      <div
        class="c4 c5"
      >
        <h2
          class="c6"
        >
          Select a maintenance start window
        </h2>
      </div>
      <div
        class="c7 c8 c9"
      >
        <div
          class="c10"
        >
          Teleport provides different cluster maintenance windows to minimize downtime during upgrades, patches, etc.
        </div>
        <div
          class="c11"
        >
          <div
            class="react-select-container react-select--is-disabled css-14jk2my-container"
          >
            <div
              class="react-select__control react-select__control--is-disabled css-1fhf3k1-control"
            >
              <div
                class="react-select__value-container react-select__value-container--has-value css-g1d714-ValueContainer"
              >
                <div
                  class="react-select__single-value react-select__single-value--is-disabled css-107lb6w-singleValue"
                >
                  08:00 (UTC)
                </div>
                <div
                  class="css-b8ldur-Input"
                >
                  <div
                    class="react-select__input"
                    style="display: inline-block;"
                  >
                    <input
                      aria-autocomplete="list"
                      autocapitalize="none"
                      autocomplete="off"
                      autocorrect="off"
                      disabled=""
                      id="react-select-3-input"
                      spellcheck="false"
                      style="box-sizing: content-box; width: 2px; border: 0px; opacity: 1; outline: 0; padding: 0px;"
                      tabindex="0"
                      type="text"
                      value=""
                    />
                    <div
                      style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;"
                    />
                  </div>
                </div>
              </div>
              <div
                class="react-select__indicators css-1hb7zxy-IndicatorsContainer"
              >
                <span
                  class="react-select__indicator-separator css-109onse-indicatorSeparator"
                />
                <div
                  aria-hidden="true"
                  class="react-select__indicator react-select__dropdown-indicator css-tlfecz-indicatorContainer"
                >
                  <svg
                    aria-hidden="true"
                    class="css-6q0nyr-Svg"
                    focusable="false"
                    height="20"
                    viewBox="0 0 20 20"
                    width="20"
                  >
                    <path
                      d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="c12"
      >
        <button
          class="c13"
          disabled=""
          fill="filled"
        >
          Save
        </button>
        <button
          class="c14"
          disabled=""
          fill="filled"
        >
          Cancel
        </button>
      </div>
    </div>
  </div>
</div>
`;
